--- a/app/globals.css
+++ b/app/globals.css
@@ -2,10 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body,
+:root {
+  @apply h-full;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
-
 @layer utilities {
   .text-balance {
     text-wrap: balance;
