--- a/app/globals.css
+++ b/app/globals.css
@@ -130,3 +130,24 @@ body {
 .sidebar-button:hover::before {
   animation: reflectAnimation 2s ease-in-out infinite;
 }
+
+
+/* Noise background on the lesson page */
+
+.noise-background {
+    position: relative;
+    background-color: #FFFFFF; /* Adjust the blue color to match your needs */
+    min-height: 100vh;
+}
+
+.noise-background::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 256 256' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.65' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+    opacity: 0.05; /* Adjust this value to control noise intensity */
+    pointer-events: none;
+}
